--- a/content/publication/journal-article/cite.bib
+++ b/content/publication/journal-article/cite.bib
@@ -1,8 +1,51 @@
-@article{example2,
-  title = {An example journal article},
-  author={Bighetti, Nelson and Ford, Robert},
-  journal = {Journal of Source Themes},
-  year    = 2015,
-  volume  = 1,
-  number  = 1
+@article{liu2018numerical,
+  title={Numerical studies of submesoscale island wakes in the Kuroshio},
+  author={Liu, Chih-Lun and Chang, Ming-Huei},
+  journal={Journal of Geophysical Research: Oceans},
+  volume={123},
+  number={8},
+  pages={5669--5687},
+  year={2018},
+  publisher={Wiley Online Library}
+}
+
+@article{chang2019observations,
+  title={Observations of island wakes at high Rossby numbers: Evolution of submesoscale vortices and free shear layers},
+  author={Chang, Ming-Huei and Jan, Sen and Liu, Chih-Lun and Cheng, Yu-Hsin and Mensah, Vigan},
+  journal={Journal of Physical Oceanography},
+  volume={49},
+  number={11},
+  pages={2997--3016},
+  year={2019},
+  publisher={American Meteorological Society}
+}
+
+@article{chang2022internal,
+  title={Internal hydraulic transition and turbulent mixing observed in the Kuroshio over the I-Lan ridge off Northeastern Taiwan},
+  author={Chang, Ming-Huei and Cheng, Yu-Hsin and Yeh, Yu-Yu and Yang, Yiing Jang and Jan, Sen and Liu, Chih-Lun and Matsuno, Takeshi and Endoh, Takahiro and Tsutsumi, Eisuke and Chen, Jia-Lin and others},
+  journal={Journal of Physical Oceanography},
+  volume={52},
+  number={12},
+  pages={3179--3198},
+  year={2022}
+}
+
+@article{liu2022butterfly,
+  title={The butterfly effect and the transition to turbulence in a stratified shear layer},
+  author={Liu, Chih-Lun and Kaminski, Alexis K and Smyth, William D},
+  journal={Journal of Fluid Mechanics},
+  volume={953},
+  pages={A43},
+  year={2022},
+  publisher={Cambridge University Press}
+}
+
+@article{liu2023effects,
+  title={The effects of boundary proximity on Kelvin--Helmholtz instability and turbulence},
+  author={Liu, Chih-Lun and Kaminski, Alexis K and Smyth, William D},
+  journal={Journal of Fluid Mechanics},
+  volume={966},
+  pages={A2},
+  year={2023},
+  publisher={Cambridge University Press}
 }
